Changed Our Mission

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 <div class="subfont">We want to enrich our school and community's engineering culture.</div>
                 <div class = "paratext">We strive to create an FRC program...</div>
             </div>
-            <div id="big" class="forepage">
+            <!-- <div id="big" class="forepage">
                 <div class="subfont">Why fund us?</div>
-                <div class = "paratext">We are the STEM workforce of tomorrow.</div>
+                <div class = "paratext">We are the STEM workforce of tomorrow.</div> -->
                 <!-- <div class="paratext" id = "bigtxt">Reaching for the Skynet (RFS) is a way for students to gain advanced and hands-on STEM opportunities and experience.
                 Recently winning a $6,000 grant from First Inspires, RFS is off to a great start getting off the ground and many of the
                 fundamental logistical challenges have already been alleviated. However, many expenses such as mechanical parts and
@@ -81,8 +81,8 @@
                 such as Brandeis’ BroncBotz, to learn the inner ropes of FRC. Recently, a member of the group got an opportunity to talk
                 about RFS on the local San Antonio podcast, CyberTalk.
             </div> -->
-            </div>
-        </div>
+            <!-- </div> -->
+        <!-- </div> -->
         <div id = "greet">
             <div class="frontpage">
                 <div class="titlefont">Learn About the Members of the Team</div>
