--- a/index.html
+++ b/index.html
@@ -62,27 +62,7 @@
                 <div class="subfont">We want to enrich our school and community's engineering culture.</div>
                 <div class = "paratext">We strive to create an FRC program...</div>
             </div>
-            <!-- <div id="big" class="forepage">
-                <div class="subfont">Why fund us?</div>
-                <div class = "paratext">We are the STEM workforce of tomorrow.</div> -->
-                <!-- <div class="paratext" id = "bigtxt">Reaching for the Skynet (RFS) is a way for students to gain advanced and hands-on STEM opportunities and experience.
-                Recently winning a $6,000 grant from First Inspires, RFS is off to a great start getting off the ground and many of the
-                fundamental logistical challenges have already been alleviated. However, many expenses such as mechanical parts and
-                competition entry fees are obstacles in which still stand in the way of elevating the San Antonio youth population’s
-                access to education on forward-thinking technology. The majority of RFS’s members are from Keystone; they realized that
-                their school offers few opportunities for students interested in engineering. RFS hopes to introduce more engineering
-                opportunities to Keystone School and the community. To offer those students a chance to learn about engineering and
-                create a community of young engineers, RFS was formed. In addition to Keystone students, RFS has received emails for
-                other students from other schools asking to join the newly-formed team. Not only does the RFS team hope to better
-                Keystone’s engineering program but to also open opportunities for other schools to get engaged with the FRC program.
-                Through FIRST Robotics Competition, high school students learn fundamental engineering skills, such as CAD, C++, and
-                mechanics, in a fun, competitive space. Exciting the youth of today to pursue STEM fields and careers will secure the
-                future of STEM, engineering, and other rapidly expanding career fields. RFS has been collaborating with other teams,
-                such as Brandeis’ BroncBotz, to learn the inner ropes of FRC. Recently, a member of the group got an opportunity to talk
-                about RFS on the local San Antonio podcast, CyberTalk.
-            </div> -->
-            <!-- </div> -->
-        <!-- </div> -->
+        </div>
         <div id = "greet">
             <div class="frontpage">
                 <div class="titlefont">Learn About the Members of the Team</div>
