More Bar Editing

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </td>
                     <td>
                         <div id="com" class="top_left">
-                            <div class="left_txt">Recent</div>
+                            <div class="left_txt">Recent News</div>
                         </div>
                     </td>
                     <td>
