--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <!-- <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"> -->
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" href="data:,">
+        <title>Reaching for the Skynet</title>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
         <style>
         </style>
     </head>
@@ -15,7 +17,7 @@
                     <td>
                         <!-- <div id="logo"></div> -->
                         <!-- <img src="{{ url_for('static', filename='image0.jpg') }}" id="logo"> -->
-                        <img src="image0.jpg" id="logo">
+                        <img src="favicon.ico" id="logo">
                     </td>
                     <!-- <td>
                         <div id="home" class="top_left">
