--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div id = "first-body" class = "frontpage">
             <div id = "name" class = "intro">Reaching for the Skynet</div>
-            <div id = "welcome" class = "intro">San Antonio's FIRST Robotics Competition (FRC) Team</div>
+            <div id = "welcome" class = "intro">Keystone's FIRST Robotics Competition (FRC) Team</div>
         </div>
         <div id = "us">
             <div class="frontpage">
