--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
         </div>
         <div id = "sponsors">
             <div id = "ty">A Huge Thanks to our Sponsors:</div>
-            <a href = "https://www.firstinspires.org">
+            <a href = "http://www.argosyfnd.org/">
                 <!-- <img src = " {{ url_for('static', filename = 'first-logo.png')}} " class = "spon"> -->
-                <img src = "first-logo.png" class = "spon">
+                <img src = "argosy.jpg" class = "spon">
             </a>
         </div>
     </body>
