Worked on Recent News

--- a/index.html
+++ b/index.html
@@ -82,6 +82,33 @@
             <div class="frontpage">
                 <div class="titlefont">What has RFS been up to?</div>
             </div>
+            <div class="event" id="key">
+                <div class="date">
+                    December 12, 2019
+                </div>
+                <div class="item">
+                    RFS Gets Keystone School Faculty Sponsor!
+                </div>
+            </div>
+            <div class="event">
+                <div class="date">
+                    November 23, 2019
+                </div>
+                <div class="item">
+                    RFS is Officially Registered as Team 8405!
+                </div>
+            </div>
+            <div class = "event" id = "arg">
+                <div class = "date">
+                    November 21, 2019
+                </div>
+                <div class = "item">
+                    RFS Wins $6000 Grant from the Argosy Foundation!
+                </div>
+            </div>
+            <!-- <iframe
+                src="https://calendar.google.com/calendar/embed?src=q46q449nhm26perf9tdl9ef2j8%40group.calendar.google.com&ctz=America%2FChicago"
+                style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe> -->
         </div>
         <div id = "connect">
             <div class="frontpage">
@@ -95,7 +122,7 @@
             <div id = "ty">A Huge Thanks to our Sponsors:</div>
             <a href = "http://www.argosyfnd.org/">
                 <!-- <img src = " {{ url_for('static', filename = 'first-logo.png')}} " class = "spon"> -->
-                <img src = "argosy.jpg" class = "spon">
+                <img src = "logo/argosy.jpg" class = "spon">
             </a>
         </div>
     </body>
