Updated Mission Statement

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 <div class="titlefont">Our Mission</div>
             </div>
             <div id = "text" class = "forepage">
-                <div class="subfont">We want to enrich our school and community's engineering culture.</div>
-                <div class = "paratext">We strive to create an FRC program...</div>
+                <div class="subfont">We Strive To...</div>
+                <div class = "titlefont" id = "miss"></div>
             </div>
         </div>
         <div id = "greet">
