Fixed a small bug

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div id = "text" class = "forepage">
                 <div class="subfont">We Strive To...</div>
-                <div class = "titlefont" id = "miss"></div>
+                <div class = "titlefont" id = "miss">Enrich Keystone's Robotics Program</div>
             </div>
         </div>
         <div id = "greet">
