--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"> -->
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" href="data:,">
         <title>Reaching for the Skynet</title>
@@ -30,8 +29,6 @@
                         </div>
                     </td>
                     <td>
-                        <!-- <div id="logo"></div> -->
-                        <!-- <img src="{{ url_for('static', filename='image0.jpg') }}" id="logo"> -->
                         <img src="favicon.ico" id="logo">
                     </td>
                     <td>
@@ -83,10 +80,10 @@
                 <div class="titlefont">What has RFS been up to?</div>
             </div>
             <div class="event" id="key">
-                <div class="date">
+                <div class="date_white">
                     December 12, 2019
                 </div>
-                <div class="item">
+                <div class="item_white">
                     RFS Gets Keystone School Faculty Sponsor!
                 </div>
             </div>
