New Colour Scheme, etc.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </td>
                     <td>
                         <div id="com" class="top_left">
-                            <div class="left_txt">Recent News</div>
+                            <div class="left_txt">Resources</div>
                         </div>
                     </td>
                     <td>
@@ -66,18 +66,11 @@
             <div class="frontpage">
                 <div class="titlefont">Learn About the Members of the Team</div>
             </div>
+            <!-- <div class = "event"></div> -->
         </div>
         <div id="blog">
             <div class = "frontpage">
-                <div id="blogtitle" class = "titlefont">Catch up with RFS on our Blog!</div>
-            </div>
-            <div id = "blogentries">
-
-            </div>
-        </div>
-        <div id = "success">
-            <div class="frontpage">
-                <div class="titlefont">What has RFS been up to?</div>
+                <div id="blogtitle" class = "titlefont">What has RFS been up to?</div>
             </div>
             <div class="event" id="key">
                 <div class="date_white">
@@ -95,13 +88,18 @@
                     RFS is Officially Registered as Team 8405!
                 </div>
             </div>
-            <div class = "event" id = "arg">
-                <div class = "date">
+            <div class="event" id="arg">
+                <div class="date">
                     November 21, 2019
                 </div>
-                <div class = "item">
+                <div class="item">
                     RFS Wins $6000 Grant from the Argosy Foundation!
                 </div>
+            </div>
+        </div>
+        <div id = "success">
+            <div class="frontpage">
+                <div class="titlefont">The More We Learn, the More We Share</div>
             </div>
             <!-- <iframe
                 src="https://calendar.google.com/calendar/embed?src=q46q449nhm26perf9tdl9ef2j8%40group.calendar.google.com&ctz=America%2FChicago"
@@ -122,8 +120,10 @@
                 <img src = "logo/argosy.jpg" class = "spon">
             </a>
         </div>
+        <div id = "ba1" class = "blog_article">
+            
+        </div>
     </body>
     <!-- <script src="{{ url_for('static', filename='index.js') }}"></script> -->
     <script src="index.js"></script>
-
 </html>
