Added background image and updated events

--- a/index.html
+++ b/index.html
@@ -63,14 +63,31 @@
             </div>
         </div>
         <div id = "greet">
-            <div class="frontpage">
-                <div class="titlefont">Learn About the Members of the Team</div>
+            <div class="frontpage" id = "shopday1">
+                <div class="frontpage" id = "op">
+                    <div class="titlefont">Learn About the Members of the Team</div>
+                </div>
             </div>
-            <!-- <div class = "event"></div> -->
         </div>
         <div id="blog">
             <div class = "frontpage">
                 <div id="blogtitle" class = "titlefont">What has RFS been up to?</div>
+            </div>
+            <div class = "event" id = "sw">
+                <div class="date">
+                    December 26, 2019
+                </div>
+                <div class="item">
+                    SolidWorks Sponsors RFS!
+                </div>
+            </div>
+            <div class="event" id="shop1">
+                <div class="date_white">
+                    December 21, 2019
+                </div>
+                <div class="item_white">
+                    RFS Visits Shop!
+                </div>
             </div>
             <div class="event" id="key">
                 <div class="date_white">
