Updated Contact Us

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="titlefont">Contact us!</div>
             </div>
             <div id="text" class="forepage">
-                <div id = "interest" class = "subfont">Interested in Sponsoring us?</div>
+                <div id = "interest" class = "subfont">Interested in Sponsoring Us? Give us an Email! <br>Email: skynet8405@gmail.com<br>Instagram: reachingfortheskynet</div>
             </div>
         </div>
         <nav id = "sponsors">
